[tool.poetry]
name = "communicationnetwork"
version = "0.1.0"
description = ""
authors = ["EgorGorshen <egorgorshenckov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sockets = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
